<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/dark_blue"
        >
        <ImageView
            android:id="@+id/image_close"
            android:layout_width="@dimen/cancel_image_size"
            android:layout_height="@dimen/cancel_image_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_baseline_cancel_24" />

        <!--text view for displaying course name-->
        <TextView
            android:id="@+id/title"

            android:layout_width="@dimen/banner_text_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/dsa_self_paced_course"
            android:text="@string/dsa_self_paced_course"
            android:textColor="@color/white"
            android:textSize="@dimen/banner_title_text"
            android:textStyle="bold" />

        <!--text view for displaying course tracks-->
        <TextView
            android:id="@+id/description"
            android:layout_width="@dimen/banner_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="@dimen/banner_small_margin_top"
            android:contentDescription="@string/close_description"
            android:text="@string/close_description"
            android:textColor="@color/white"
            android:textSize="@dimen/banner_desc_text"
            />



    </RelativeLayout>

</androidx.cardview.widget.CardView>