<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/title_text_size"
            android:contentDescription="@string/select_guests"
            android:text="@string/select_guests" />
    </androidx.appcompat.widget.Toolbar>
<!--    app:layout_constraintTop_toBottomOf="@+id/toolbar"-->


    <androidx.core.widget.NestedScrollView

        android:layout_marginBottom="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        android:id = "@+id/nested_scrollview"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="0dp"        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

    <TextView
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/guest_text_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/info_left_margin"
        android:contentDescription="@string/these_guests_have_reservations"
        android:text="@string/these_guests_have_reservations"
        app:layout_constraintStart_toStartOf="parent"
         />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view_reserved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/header1"
        tools:listitem="@android:layout/simple_list_item_checked" />


    <TextView
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/info_left_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/guest_text_size"
        android:textStyle="bold"
        android:contentDescription="@string/these_guests_need_reservations"
        android:text="@string/these_guests_need_reservations"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view_not_reserved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        app:layout_constraintBottom_toTopOf="@+id/reserve_notice"
        app:layout_constraintTop_toBottomOf="@+id/header2"
        tools:listitem="@android:layout/simple_list_item_checked" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/reserve_notice"
        app:layout_constraintTop_toBottomOf="@+id/my_recycler_view_not_reserved"
        android:layout_margin="@dimen/info_left_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        >


        <ImageView
            android:layout_width="@dimen/info_width"
            android:layout_height="@dimen/info_height"
            android:layout_alignParentTop="true"
            android:id="@+id/notice_sign"
            android:contentDescription="@string/info"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_baseline_info_24"/>
        <TextView
            android:layout_width="match_parent"
            android:contentDescription="@string/reserved_notice"
            android:text="@string/reserved_notice"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/notice_sign"
            />

    </RelativeLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_shape_button"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:text="@string/continue2"
        android:contentDescription="@string/continue2"
        android:enabled="false"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/layout_guide"
        app:layout_constraintGuide_percent="0.45" />


</androidx.constraintlayout.widget.ConstraintLayout>